--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="254FinalProject/styles/styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
     <meta charset="UTF-8">
     <title>Email Classifier</title>
 </head>
