--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,19 @@
 body {
     background-color: black;
     color:white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+}
+
+.form-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+label {
+    text-align: left;
 }
